# UNT_Book

./: .gitignore  README.md  boolean_matrix_multiplication.py  data.txt  gpu_vs_unt.py  lcs_demo  multiply_element_wise.py  paper_matrix.py  running_time_matrix.py  running_time_matrix_multiply_element_wise.py  sat_equation.py  solution_to_subset_sum_for_large_sums.txt  ss_test.txt  vertex_cover_to_subset_sum.py
SDK/: CMakeLists.txt  main.cpp
SDK/examples/: unt_vs_gpu_float.cpp
SDK/examples/boolean_multiplication/: gpu_vs_unt_plot.py  unt_vs_gpu_boolean_multiply.cpp
SDK/peqnp/: unt.hpp
universal/: CMakeLists.txt  main.c  readme.txt  universal.asm  universal.h
unt_mn_matrix_product/: CMakeLists.txt  main.cpp  readme.txt
unt_mn_matrix_productn_vector/: CMakeLists.txt  main.cpp  readme.txt
